ggplot2 1.0.1.9xxx
----------------------------------------------------------------

* ggplot no longer throws an error if you your plot doesn't have any
  layers.  Instead it automatically adds `geom_blank()` (#1246)

* `geom_smooth()` is no longer so chatty. If you want to know what the deafult
  smoothing method is, look it up in the documentation! (#1247)

* `geom_smooth()`/`stat_smooth()` no longer pass ... on to the
  underlying model. Instead, put additional arguments in `method.args` (#1245).

* `element_text()` gains a margins argument which allows you to add additional
  margins around text elements in the plot. The default themes have been
  adjusted to add a little extra spacing between titles and text so the plots
  don't feel so cramped. The default margins scale with the theme font size,
  so the appearance at larger font sizes should be considerably improved
  (#1228). As part of these changes `axis.ticks.margin` has been deprecated:
  now use the margin property of `axis.ticks`.

* ggplot2 re-exports grid `arrow()` and `unit()` so you don't need to attach
  grid or use `grid::` for these commonly used functions (#1225)

* `geom_histogram()` and `geom_smooth()` now only inform you about the
  default values once per layer, rather than once per panel (#1220).

* `geom_bar()` and `geom_histogram()` no longer share `stat_bin()`. Now
  `geom_bar()` has its own stat, `stat_bar()`. This is useful if you want to
  display a bar chart of continuous data, drawing a bar at each unique
  location.

* `stat_summary2d()` has been renamed to `stat_summary_2d()` (with
  an alias so you can keep using the old method).

* Date and datetime scales now have `date_breaks`, `date_minor_breaks` and
  `date_labels` arguments so that you never need to use the long form
  `scales::date_breaks()` or `scales::date_format()`.

* `aes_auto()` has been deprecated. `aes_()` added as alias to old `aes_q()`.
  `aes_()` can now use formulas, so the most concise SE version of